@@ -65,3 +65,5 @@ stuck.timeout=300
 
 restarter.exception.enabled=false
 restarter.exception.timeout=5
+restarter.inventory.enabled=false
+restarter.inventory.timeout=5
